fixed images overflow, hide cation button working

--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,16 @@
 .Image {
+  margin-top: 1vh;
   min-height: 90vh;
   max-height: 90vh;
 }
-.App {
-  text-align: center;
-}
   
 .App-header {
+  overflow: hidden;
   height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: 3vh;
   color: black;
 }
@@ -56,6 +54,7 @@
 
 #wrapper{
   width: 100vw;
+  margin-top: 1vh;
   display:flex;
   flex-direction: row;
   align-items: flex-end;
